fixes for pdf and png generation